--- a/strapi/package.json
+++ b/strapi/package.json
@@ -36,7 +36,7 @@
     "name": "A Strapi developer"
   },
   "strapi": {
-    "uuid": "LAUNCHPAD"
+    "uuid": "LAUNCHPAD-LOCAL-e5d69d30-3d3c-4e17-a0f2-965fe72d5d4f"
   },
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
